--- a/DS160_Final_Project_DMB_JDD1.ipynb
+++ b/DS160_Final_Project_DMB_JDD1.ipynb
@@ -6,13 +6,13 @@
    "metadata": {},
    "source": [
     "# DS160 Final Project\n",
-    "Joshua Dow\n",
+    "#### Joshua Dow\n",
     "\n",
-    "Drew Buhr\n",
+    "#### Drew Buhr\n",
     "\n",
-    "DS160-01\n",
+    "#### DS160-01\n",
     "\n",
-    "Spring 22"
+    "#### Spring 22"
    ]
   },
   {
@@ -46,7 +46,7 @@
    "id": "ff3011ee",
    "metadata": {},
    "source": [
-    "Converting txt files to csv"
+    "#### Converting txt files to csv"
    ]
   },
   {
@@ -87,7 +87,7 @@
    "id": "aa4ed868",
    "metadata": {},
    "source": [
-    "Putting each file into a seperate dataframe"
+    "#### Putting each file into a seperate dataframe"
    ]
   },
   {
@@ -107,7 +107,7 @@
    "id": "6ce1b218",
    "metadata": {},
    "source": [
-    "Combining those csv files into one merged dataframe for analysis"
+    "#### Combining those csv files into one merged dataframe for analysis"
    ]
   },
   {
@@ -125,7 +125,7 @@
    "id": "df6ba5b9",
    "metadata": {},
    "source": [
-    "Converted Occupancy column from binary 1 and 0 to Yes and No in df4 but kept df3 because the binary may be easier for analysis"
+    "#### Converted Occupancy column from binary 1 and 0 to Yes and No in df4 but kept df3 because the binary may be easier for analysis"
    ]
   },
   {
@@ -154,7 +154,7 @@
    "id": "51a86611",
    "metadata": {},
    "source": [
-    "Confirming that the int to string conversion was successful"
+    "#### Confirming that the int to string conversion was successful"
    ]
   },
   {
@@ -585,7 +585,7 @@
    "id": "555b9c64",
    "metadata": {},
    "source": [
-    "Checking for missing data"
+    "#### Checking for missing data"
    ]
   },
   {
@@ -670,7 +670,7 @@
    "id": "4cfb1a79",
    "metadata": {},
    "source": [
-    "Examining Relationships between variables"
+    "#### Examining Relationships between variables"
    ]
   },
   {
@@ -1070,7 +1070,7 @@
    "id": "74080fc8",
    "metadata": {},
    "source": [
-    "Made a seperate dataframe that is identical to the previous dataframe, but without the date column"
+    "#### Made a seperate dataframe that is identical to the previous dataframe, but without the date column"
    ]
   },
   {
@@ -1735,7 +1735,7 @@
    "id": "77a88525",
    "metadata": {},
    "source": [
-    "Copying earlier process for creating new dataframes but for the original seperate files instead of the merged file"
+    "#### Copying earlier process for creating new dataframes but for the original seperate files instead of the merged file"
    ]
   },
   {
@@ -1800,7 +1800,7 @@
    "id": "9e2f795e",
    "metadata": {},
    "source": [
-    "Experiment #1"
+    "#### Experiment #1"
    ]
   },
   {
@@ -1897,7 +1897,7 @@
    "id": "a74b7526",
    "metadata": {},
    "source": [
-    "Experiment #2"
+    "#### Experiment #2"
    ]
   },
   {
@@ -1994,7 +1994,7 @@
    "id": "a39d1ac7",
    "metadata": {},
    "source": [
-    "Experment #3"
+    "#### Experment #3"
    ]
   },
   {
@@ -2091,7 +2091,7 @@
    "id": "54ea20af",
    "metadata": {},
    "source": [
-    "Experiment #4"
+    "#### Experiment #4"
    ]
   },
   {
@@ -2188,7 +2188,7 @@
    "id": "197b1589",
    "metadata": {},
    "source": [
-    "Experiment #5"
+    "#### Experiment #5"
    ]
   },
   {
@@ -2285,7 +2285,7 @@
    "id": "73f3d1f1",
    "metadata": {},
    "source": [
-    "Experiment #6"
+    "#### Experiment #6"
    ]
   },
   {
@@ -2382,7 +2382,7 @@
    "id": "72492fac",
    "metadata": {},
    "source": [
-    "#### Failed experiments included in notebook to document issues experienced regarding bias due to using merged dataset rather than the data split by the original author."
+    "### Failed experiments included in notebook to document issues experienced regarding bias due to using merged dataset rather than the data split by the original author."
    ]
   },
   {
@@ -2390,7 +2390,7 @@
    "id": "c0a3fc9d",
    "metadata": {},
    "source": [
-    "Failed Experiment #1"
+    "#### Failed Experiment #1"
    ]
   },
   {
@@ -2509,7 +2509,7 @@
    "id": "c2e19e9c",
    "metadata": {},
    "source": [
-    "Failed Experiment #2"
+    "#### Failed Experiment #2"
    ]
   },
   {
@@ -2639,7 +2639,7 @@
    "id": "f19acafd",
    "metadata": {},
    "source": [
-    "Failed Experiment #3"
+    "#### Failed Experiment #3"
    ]
   },
   {
@@ -2769,7 +2769,7 @@
    "id": "3cdba069",
    "metadata": {},
    "source": [
-    "Failed Experiment #4"
+    "#### Failed Experiment #4"
    ]
   },
   {
@@ -2899,7 +2899,7 @@
    "id": "35826a3b",
    "metadata": {},
    "source": [
-    "Failed Experiment #5"
+    "#### Failed Experiment #5"
    ]
   },
   {
@@ -3059,7 +3059,7 @@
    "id": "308822a9",
    "metadata": {},
    "source": [
-    "Comparing the accuracy scores of different numbers of neighbors"
+    "#### Comparing the accuracy scores of different numbers of neighbors"
    ]
   },
   {
@@ -3162,7 +3162,7 @@
    "id": "15c4ee26",
    "metadata": {},
    "source": [
-    "Experiment #1"
+    "#### Experiment #1"
    ]
   },
   {
@@ -3238,7 +3238,7 @@
    "id": "57868960",
    "metadata": {},
    "source": [
-    "Experiment #2"
+    "#### Experiment #2"
    ]
   },
   {
@@ -3314,7 +3314,7 @@
    "id": "de21d961",
    "metadata": {},
    "source": [
-    "Experiment #3"
+    "#### Experiment #3"
    ]
   },
   {
@@ -3390,7 +3390,7 @@
    "id": "3ebb6905",
    "metadata": {},
    "source": [
-    "Experiment #4"
+    "#### Experiment #4"
    ]
   },
   {
@@ -3466,7 +3466,7 @@
    "id": "b48de98d",
    "metadata": {},
    "source": [
-    "Experiment #5"
+    "#### Experiment #5"
    ]
   },
   {
@@ -3542,7 +3542,7 @@
    "id": "8ce6b3d6",
    "metadata": {},
    "source": [
-    "Experiment #6"
+    "#### Experiment #6"
    ]
   },
   {
@@ -3618,7 +3618,7 @@
    "id": "0df43e56",
    "metadata": {},
    "source": [
-    "#### Failed experiments included in notebook to document issues experienced regarding bias due to using merged dataset rather than the data split by the original author."
+    "### Failed experiments included in notebook to document issues experienced regarding bias due to using merged dataset rather than the data split by the original author."
    ]
   },
   {
@@ -3626,7 +3626,7 @@
    "id": "9c594393",
    "metadata": {},
    "source": [
-    "Failed Experiment #1"
+    "#### Failed Experiment #1"
    ]
   },
   {
@@ -3703,7 +3703,7 @@
    "id": "8d8250b9",
    "metadata": {},
    "source": [
-    "Failed Experiment #2"
+    "#### Failed Experiment #2"
    ]
   },
   {
@@ -3791,7 +3791,7 @@
    "id": "421cae2a",
    "metadata": {},
    "source": [
-    "Failed Experiment #3"
+    "#### Failed Experiment #3"
    ]
   },
   {
@@ -3879,7 +3879,7 @@
    "id": "a562e49c",
    "metadata": {},
    "source": [
-    "Failed Experiment #4"
+    "#### Failed Experiment #4"
    ]
   },
   {
@@ -3967,7 +3967,7 @@
    "id": "505e634c",
    "metadata": {},
    "source": [
-    "Failed Experiment #5"
+    "#### Failed Experiment #5"
    ]
   },
   {
@@ -4053,7 +4053,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -4067,7 +4067,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
